--- a/DFC.App.MatchSkills/Views/Matches/_JobSectorGrowth.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_JobSectorGrowth.cshtml
@@ -1,5 +1,6 @@
 ﻿@model DFC.App.MatchSkills.Models.CareerMatch
 
-<div class="govuk-!-font-size-14 govuk-clearfix govuk-accordion">
+<div class="govuk-grid-column-one-third 
+     govuk-!-font-size-14 govuk-clearfix ">
     <strong>Job sector growth:</strong> <em class="embedded-fa-icon fa-arrow-up"></em>@Model.JobSectorGrowthDescription
 </div>
