--- a/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
@@ -65,4 +65,4 @@
         </div>
     </div>
 </div>
-<script defer async src="@Model.CDN/nationalcareers_toolkit/js/matchskills.min.js"></script>
+<script nws-csp-add-nonce="true" defer async src="@Model.CDN/nationalcareers_toolkit/js/matchskills.min.js"></script>
