--- a/DFC.App.MatchSkills/Views/_ViewImports.cshtml
+++ b/DFC.App.MatchSkills/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using DFC.App.MatchSkills
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DFC.Personalisation.CommonUI
+@addTagHelper *, NWebsec.AspNetCore.Mvc.TagHelpers
