--- a/DFC.App.MatchSkills/Views/Matches/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/Body.cshtml
@@ -9,17 +9,18 @@
 
 <div class="govuk-main-wrapper govuk-width-container">
     @*<div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <p class="govuk-body">
-                Based on the skills in your skills list these are the roles your skills matched to.
-            </p>
-        </div>
-        <div class="govuk-grid-column-one-third">
-            <div class="grey border-bottom app-save-panel--alt p-right">
-                <span class="govuk-heading-m">Return to this later</span><a href="#">Save my progress</a>
+            <div class="govuk-grid-column-two-thirds">
+                <p class="govuk-body">
+                    Based on the skills in your skills list these are the roles your skills matched to.
+                </p>
             </div>
-        </div>
-    </div>*@
+            <div class="govuk-grid-column-one-third">
+                <div class="grey border-bottom app-save-panel--alt p-right">
+                    <span class="govuk-heading-m">Return to this later</span><a href="#">Save my progress</a>
+                </div>
+            </div>
+        </div>*@
+    <govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
             <p><partial name="_MatchesCount" /></p>
@@ -28,76 +29,76 @@
 
     <div class="govuk-grid-row">
         @*<div class="govuk-grid-column-one-third">
-            <div class="app-sidebar app-advisor-panel">
-                <div class="filters-container">
-                    <div class="filter-label">
-                        <h2 class="govuk-heading-s govuk-!-margin-0">Filter by category</h2>
-                    </div>
-                    <div class="filter-box">
-                        <fieldset class="govuk-fieldset">
-                            <legend class="govuk-visually-hidden">Choose desired job categories</legend>
-                            <div class="govuk-radios">
-                                <div class="govuk-radios__item">
-                                    <input checked="checked" class="govuk-radios__input" data-val="true" data-val-required="The CourseHours field is required." id="CourseHours_All" name="CourseHours" type="radio" value="All">
-                                    <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="CourseHours_All">All</label>
-                                </div>
-                                <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="CourseHours_Fulltime" name="CourseHours" type="radio" value="Fulltime">
-                                    <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="CourseHours_Fulltime">Administration</label>
-                                </div>
-                                <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="CourseHours_PartTime" name="CourseHours" type="radio" value="PartTime">
-                                    <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="CourseHours_PartTime">Animal care</label>
-                                </div>
-                                <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="CourseHours_Flexible" name="CourseHours" type="radio" value="Flexible">
-                                    <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="CourseHours_Flexible">Beauty and wellbeing</label>
-                                </div>
+                <div class="app-sidebar app-advisor-panel">
+                    <div class="filters-container">
+                        <div class="filter-label">
+                            <h2 class="govuk-heading-s govuk-!-margin-0">Filter by category</h2>
+                        </div>
+                        <div class="filter-box">
+                            <fieldset class="govuk-fieldset">
+                                <legend class="govuk-visually-hidden">Choose desired job categories</legend>
+                                <div class="govuk-radios">
+                                    <div class="govuk-radios__item">
+                                        <input checked="checked" class="govuk-radios__input" data-val="true" data-val-required="The CourseHours field is required." id="CourseHours_All" name="CourseHours" type="radio" value="All">
+                                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="CourseHours_All">All</label>
+                                    </div>
+                                    <div class="govuk-radios__item">
+                                        <input class="govuk-radios__input" id="CourseHours_Fulltime" name="CourseHours" type="radio" value="Fulltime">
+                                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="CourseHours_Fulltime">Administration</label>
+                                    </div>
+                                    <div class="govuk-radios__item">
+                                        <input class="govuk-radios__input" id="CourseHours_PartTime" name="CourseHours" type="radio" value="PartTime">
+                                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="CourseHours_PartTime">Animal care</label>
+                                    </div>
+                                    <div class="govuk-radios__item">
+                                        <input class="govuk-radios__input" id="CourseHours_Flexible" name="CourseHours" type="radio" value="Flexible">
+                                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="CourseHours_Flexible">Beauty and wellbeing</label>
+                                    </div>
 
-                            </div>
-                        </fieldset>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="filters-container">
+                        <div class="filter-label">
+                            <h2 class="govuk-heading-s govuk-!-margin-0">Filter by match strength</h2>
+                        </div>
+                        <div class="filter-box">
+                            <fieldset class="govuk-fieldset">
+                                <legend class="govuk-visually-hidden">Choose desired match strength</legend>
+                                <div class="govuk-radios">
+                                    <div class="govuk-radios__item">
+                                        <input checked="checked" class="govuk-radios__input" data-val="true" data-val-required="Match strength is required." id="match_all" name="match_all" type="radio" value="All_strengths">
+                                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="match_all">All</label>
+                                    </div>
+                                    <div class="govuk-radios__item">
+                                        <input class="govuk-radios__input" id="80-100" name="CourseHours" type="radio" value="Fulltime">
+                                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="80-100">80 - 100%</label>
+                                    </div>
+                                    <div class="govuk-radios__item">
+                                        <input class="govuk-radios__input" id="50-79" name="CourseHours" type="radio" value="PartTime">
+                                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="50-79">50 - 79%</label>
+                                    </div>
+                                    <div class="govuk-radios__item">
+                                        <input class="govuk-radios__input" id="less_than_50" name="CourseHours" type="radio" value="Flexible">
+                                        <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="less_than_50">less than 50%</label>
+                                    </div>
+
+                                </div>
+                            </fieldset>
+                        </div>
+                        <button class="govuk-button">Apply filters</button>
                     </div>
                 </div>
-                <div class="filters-container">
-                    <div class="filter-label">
-                        <h2 class="govuk-heading-s govuk-!-margin-0">Filter by match strength</h2>
-                    </div>
-                    <div class="filter-box">
-                        <fieldset class="govuk-fieldset">
-                            <legend class="govuk-visually-hidden">Choose desired match strength</legend>
-                            <div class="govuk-radios">
-                                <div class="govuk-radios__item">
-                                    <input checked="checked" class="govuk-radios__input" data-val="true" data-val-required="Match strength is required." id="match_all" name="match_all" type="radio" value="All_strengths">
-                                    <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="match_all">All</label>
-                                </div>
-                                <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="80-100" name="CourseHours" type="radio" value="Fulltime">
-                                    <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="80-100">80 - 100%</label>
-                                </div>
-                                <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="50-79" name="CourseHours" type="radio" value="PartTime">
-                                    <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="50-79">50 - 79%</label>
-                                </div>
-                                <div class="govuk-radios__item">
-                                    <input class="govuk-radios__input" id="less_than_50" name="CourseHours" type="radio" value="Flexible">
-                                    <label class="govuk-label govuk-radios__label govuk-!-font-size-16" for="less_than_50">less than 50%</label>
-                                </div>
-
-                            </div>
-                        </fieldset>
-                    </div>
-                    <button class="govuk-button">Apply filters</button>
-                </div>
-            </div>
-        </div>*@
+            </div>*@
 
 
         <div class="govuk-grid-column-two-thirds app-intro">
             <div class="app-results ">
                 <div class="app-results__item">
                     <hr>
-                    <partial name="_SortOptions" model="Model"/>
-                    
+                    <partial name="_SortOptions" model="Model" />
+
                     <div class="app-long-results list govuk-list govuk-grid-row" id="app-results-list--long">
                         @foreach (var careerMatch in Model.CareerMatches)
                         {
