--- a/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
@@ -10,7 +10,7 @@
     };
     slm.Skills.LoadFrom(Model.Skills);
 }
-
+<govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
 <govukErrorSummary hidden="@(!Model.HasError)">
     <govukErrorSummaryItem href="#selectskills" text="Choose skills to add to your skills list"></govukErrorSummaryItem>
 </govukErrorSummary>
