--- a/DFC.App.MatchSkills/Views/EnterSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/EnterSkills/Body.cshtml
@@ -16,6 +16,7 @@
 
 
 <div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing">
+    <govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form id="@formElementName" method="post">
@@ -30,7 +31,7 @@
                     <govukListItem text="your responsibilities outside of work"></govukListItem>
                 </govukBulletedList>
 
-                <div id="@skillSearchGroup" class="govuk-form-group @(Model.HasError ? "govuk-form-group--error": "")">
+                <div id="@skillSearchGroup" class="govuk-form-group @(Model.HasError ? "govuk-form-group--error" : "")">
 
                     <govukLabel for="@textInputElementName" text="Search for a skill" additional-class="govuk-!-font-weight-bold"></govukLabel>
 
