--- a/DFC.App.MatchSkills/Views/MoreSkills/body.cshtml
+++ b/DFC.App.MatchSkills/Views/MoreSkills/body.cshtml
@@ -22,7 +22,11 @@
     };
 
 }
-<govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
+    </div>
+</div>
     <div class="govuk-grid-column-two-thirds">
         
         <div class="govuk-grid-row">
