--- a/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/OccupationSearch/Body.cshtml
@@ -61,3 +61,4 @@
 }
 <partial name="~/ViewComponents/OccupationSearchScript/Default.cshtml" model="@scriptModel" />
 
+<script defer async src="@Model.CompositeSettings.CDN/nationalcareers_toolkit/js/matchskills.min.js"></script>
