--- a/DFC.App.MatchSkills/Views/RelatedSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/RelatedSkills/Body.cshtml
@@ -22,7 +22,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-            <form id="@form" action="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.RelatedSkills/addskills" method="post">
+            <form id="@form" action="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.RelatedSkills" method="post">
                 @Html.HiddenFor(x => x.SearchTerm)
                 <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset" id="selectSkills">
