--- a/DFC.App.MatchSkills/Views/ConfirmRemove/body.cshtml
+++ b/DFC.App.MatchSkills/Views/ConfirmRemove/body.cshtml
@@ -8,9 +8,11 @@
     slm.BeginSkillsListHTML = "<ul class='govuk-list govuk-list--bullet'>";
     slm.EndSkillsListHTML = "</ul>";
 }
-
+<div class="govuk-grid-row">
+    <govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
+</div>
+<div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
         <div class="govuk-grid-row">
 
             <div class="govuk-form-group">
@@ -23,16 +25,19 @@
                         @await Component.InvokeAsync("SkillsList", slm)
                     </div>
                 </fieldset>
+
+                <form method="post" action="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.Removed.Value">
+                    @foreach (var skill in Model.Skills)
+                    {
+                        <input id="@skill.Id" name="@skill.Id--@skill.Name" value="@skill.Name" type="hidden" />
+                    }
+
+                    <govukButton id="@Model.GetElementId("govukButton", "RemoveSelectedSkills")" text="Remove selected skills" />
+                    <govukButtonLink additional-class="govuk-button--secondary" id="@Model.GetElementId("govukButtonLink", "Cancel")" LinkTitle="Cancel Remove Skills" LinkText="Cancel" LinkHref="@CompositeViewModel.PageId.SkillsBasket"></govukButtonLink>
+
+                </form>
             </div>
-            <form method="post" action="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.Removed.Value">
-                @foreach (var skill in Model.Skills)
-                {
-                    <input id="@skill.Id" name="@skill.Id--@skill.Name" value="@skill.Name" type="hidden" />
-                }
-
-                <govukButton id="@Model.GetElementId("govukButton", "RemoveSelectedSkills")" text="Remove selected skills" />
-                <govukButtonLink additional-class="govuk-button--secondary" id="@Model.GetElementId("govukButtonLink", "Cancel")" LinkTitle="Cancel Remove Skills" LinkText="Cancel" LinkHref="@CompositeViewModel.PageId.SkillsBasket"></govukButtonLink>
-
-            </form>
         </div>
     </div>
+</div>
+
