--- a/DFC.App.MatchSkills/Views/MoreJobs/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/MoreJobs/Body.cshtml
@@ -67,3 +67,5 @@
     };
 }
 <partial name="~/ViewComponents/OccupationSearchScript/Default.cshtml" model="@scriptModel" />
+
+<script defer async src="@Model.CompositeSettings.CDN/nationalcareers_toolkit/js/matchskills.min.js"></script>
