--- a/DFC.App.MatchSkills/Views/ConfirmRemove/body.cshtml
+++ b/DFC.App.MatchSkills/Views/ConfirmRemove/body.cshtml
@@ -8,13 +8,15 @@
     slm.BeginSkillsListHTML = "<ul class='govuk-list govuk-list--bullet'>";
     slm.EndSkillsListHTML = "</ul>";
 }
-<div class="govuk-grid-row">
-    <govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
-</div>
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-grid-row">
+        <govukBackLink LinkHref="#" LinkTitle="BackLink" Id="BackLink" class="hideBackButton"></govukBackLink>
+    </div>
+</div>
 
+<div class="govuk-grid-column-two-thirds">
+        <div class="govuk-grid-row">
             <div class="govuk-form-group">
 
                 <fieldset class="govuk-fieldset">
@@ -39,5 +41,3 @@
             </div>
         </div>
     </div>
-</div>
-
