--- a/DFC.App.MatchSkills/Views/Home/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Home/Body.cshtml
@@ -41,7 +41,7 @@
                                                      hidden="@(!Model.HasErrors)"></govukTextInputError>
                             </govukTextInput>
                         </div>
-                        <govukButton additional-class="" text="continue" id="@Model.GetElementId("govUkButton", "Reload")"></govukButton>
+                        <govukButton additional-class="" text="Continue" id="@Model.GetElementId("govUkButton", "Reload")"></govukButton>
                     </form>
                 </div>
 
