--- a/DFC.App.MatchSkills/Views/EnterSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/EnterSkills/Body.cshtml
@@ -35,7 +35,7 @@
 
                     <govukLabel for="@textInputElementName" text="Search for a skill" additional-class="govuk-!-font-weight-bold"></govukLabel>
 
-                    <govukTextInput id="@textInputElementName" additional-class="">
+                    <govukTextInput id="@textInputElementName" additional-class="" has-error="@Model.HasError">
                         <govukHint HintText="You can search for a specific skill (like measuring spirit level) or a skill group (like bricklaying)"></govukHint>
                         <govukTextInputError Id="@textInputError" Text="Enter a skill" hidden="@(!Model.HasError)"></govukTextInputError>
                     </govukTextInput>
